[gd_scene load_steps=29 format=3 uid="uid://u5hoq4v423bk"]

[ext_resource type="Texture2D" uid="uid://d3jjfsxqxfyq5" path="res://art/cats.png" id="1"]
[ext_resource type="Script" path="res://nodes/player.gd" id="2"]

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("1")
region = Rect2(0, 3, 32, 31)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("1")
region = Rect2(32, 3, 32, 31)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("1")
region = Rect2(64, 3, 32, 31)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("1")
region = Rect2(96, 5, 32, 31)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("1")
region = Rect2(128, 5, 32, 31)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("1")
region = Rect2(160, 5, 32, 31)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("1")
region = Rect2(96, 67, 32, 31)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("1")
region = Rect2(128, 67, 32, 31)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("1")
region = Rect2(160, 67, 32, 31)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("1")
region = Rect2(0, 34, 32, 31)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("1")
region = Rect2(32, 34, 32, 31)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("1")
region = Rect2(64, 34, 32, 31)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("1")
region = Rect2(0, 65, 32, 31)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("1")
region = Rect2(32, 65, 32, 31)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("1")
region = Rect2(64, 65, 32, 31)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("1")
region = Rect2(0, 98, 32, 31)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("1")
region = Rect2(32, 98, 32, 31)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("1")
region = Rect2(64, 98, 32, 31)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("1")
region = Rect2(96, 36, 32, 31)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("1")
region = Rect2(128, 36, 32, 31)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("1")
region = Rect2(160, 36, 32, 31)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("1")
region = Rect2(96, 98, 32, 31)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("1")
region = Rect2(128, 98, 32, 31)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("1")
region = Rect2(160, 98, 32, 31)

[sub_resource type="SpriteFrames" id="5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("19")
}],
"loop": true,
"name": &"down_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("22")
}],
"loop": true,
"name": &"down_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("13")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("7")
}],
"loop": true,
"name": &"right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}, {
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("16")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("31")
}],
"loop": true,
"name": &"up_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("28")
}],
"loop": true,
"name": &"up_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="33"]
size = Vector2(22, 18)

[node name="player" type="CharacterBody2D"]
script = ExtResource("2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(248, 176)
sprite_frames = SubResource("5")
animation = &"up_left"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(248.5, 183.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("33")

[node name="world_camera" type="Camera2D" parent="."]
position = Vector2(248, 176)
limit_left = -104
limit_top = 64
limit_right = 580
limit_bottom = 590

[node name="post_office_interior_camera" type="Camera2D" parent="."]
position = Vector2(249, 184)
zoom = Vector2(2, 2)

[node name="main_village_camera" type="Camera2D" parent="."]
position = Vector2(248, 184)
limit_left = -608
limit_top = -700
limit_right = 864
limit_bottom = 384

[node name="cave_interior_camera" type="Camera2D" parent="."]
position = Vector2(249, 184)
zoom = Vector2(2, 2)
limit_left = -53
limit_top = 30
limit_right = 650
limit_bottom = 240

[node name="duck_house_interior_camera" type="Camera2D" parent="."]
position = Vector2(250, 185)
zoom = Vector2(2, 2)
limit_left = 9
limit_top = -240
limit_right = 400
limit_bottom = 300
